Fix color of collapsed menu icon

--- a/styles.scss
+++ b/styles.scss
@@ -19,6 +19,10 @@
   }
 }
 
+.navbar-fixed-top .navbar-toggle .icon-bar {
+    background-color: white;
+}
+
 body {
   background-color: #edf0f5;
 }
